// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installing slack app shows a failure message when we fail to install the app 1`] = `
<InstallationStatus
  error="ERROR OCCURRED"
  installingSlackApplication={false}
  successInstallationSlackApplication={false}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "red",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-173",
          "alignJustify": "MuiTypography-alignJustify-175",
          "alignLeft": "MuiTypography-alignLeft-172",
          "alignRight": "MuiTypography-alignRight-174",
          "body1": "MuiTypography-body1-169",
          "body2": "MuiTypography-body2-168",
          "button": "MuiTypography-button-171",
          "caption": "MuiTypography-caption-170",
          "colorError": "MuiTypography-colorError-183",
          "colorInherit": "MuiTypography-colorInherit-179",
          "colorPrimary": "MuiTypography-colorPrimary-180",
          "colorSecondary": "MuiTypography-colorSecondary-181",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-182",
          "display1": "MuiTypography-display1-164",
          "display2": "MuiTypography-display2-163",
          "display3": "MuiTypography-display3-162",
          "display4": "MuiTypography-display4-161",
          "gutterBottom": "MuiTypography-gutterBottom-177",
          "headline": "MuiTypography-headline-165",
          "noWrap": "MuiTypography-noWrap-176",
          "paragraph": "MuiTypography-paragraph-178",
          "root": "MuiTypography-root-160",
          "subheading": "MuiTypography-subheading-167",
          "title": "MuiTypography-title-166",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "red",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-160 MuiTypography-subheading-167"
        style={
          Object {
            "color": "red",
          }
        }
      >
        Failed to install.
        <br />
        Error: 
        ERROR OCCURRED
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;

exports[`installing slack app shows a success message when a user successfully installs the app 1`] = `
<InstallationStatus
  installingSlackApplication={false}
  successInstallationSlackApplication={true}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "green",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-173",
          "alignJustify": "MuiTypography-alignJustify-175",
          "alignLeft": "MuiTypography-alignLeft-172",
          "alignRight": "MuiTypography-alignRight-174",
          "body1": "MuiTypography-body1-169",
          "body2": "MuiTypography-body2-168",
          "button": "MuiTypography-button-171",
          "caption": "MuiTypography-caption-170",
          "colorError": "MuiTypography-colorError-183",
          "colorInherit": "MuiTypography-colorInherit-179",
          "colorPrimary": "MuiTypography-colorPrimary-180",
          "colorSecondary": "MuiTypography-colorSecondary-181",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-182",
          "display1": "MuiTypography-display1-164",
          "display2": "MuiTypography-display2-163",
          "display3": "MuiTypography-display3-162",
          "display4": "MuiTypography-display4-161",
          "gutterBottom": "MuiTypography-gutterBottom-177",
          "headline": "MuiTypography-headline-165",
          "noWrap": "MuiTypography-noWrap-176",
          "paragraph": "MuiTypography-paragraph-178",
          "root": "MuiTypography-root-160",
          "subheading": "MuiTypography-subheading-167",
          "title": "MuiTypography-title-166",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "green",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-160 MuiTypography-subheading-167"
        style={
          Object {
            "color": "green",
          }
        }
      >
        Successfully installed! The Strand bot should have DM'd you a welcome message.
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;
